Product review likes module was fixed.
