# src/main/java/com/zufar/icedlatte/review/endpoint/ProductReviewEndpoint.java
@@ -1,16 +1,15 @@
 package com.zufar.icedlatte.review.endpoint;
 
-import com.zufar.icedlatte.openapi.dto.ProductReviewRateDto;
 import com.zufar.icedlatte.openapi.dto.ProductReviewRatingStats;
 import com.zufar.icedlatte.openapi.dto.ProductReviewRequest;
 import com.zufar.icedlatte.openapi.dto.ProductReviewDto;
+import com.zufar.icedlatte.openapi.dto.ProductReviewLikeDto;
 import com.zufar.icedlatte.openapi.dto.ProductReviewsAndRatingsWithPagination;
-import com.zufar.icedlatte.review.api.ProductReviewRateProvider;
-import com.zufar.icedlatte.review.api.ProductReviewRateUpdater;
+import com.zufar.icedlatte.review.api.ProductReviewLikesUpdater;
 import com.zufar.icedlatte.review.api.ProductReviewsProvider;
 import com.zufar.icedlatte.review.api.ProductReviewCreator;
 import com.zufar.icedlatte.review.api.ProductReviewDeleter;
-import com.zufar.icedlatte.review.api.ProductReviewsStatisticsProvider;
+import com.zufar.icedlatte.review.api.ProductAverageRatingProvider;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -24,7 +23,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
 import java.util.UUID;
 
 @Slf4j
@@ -39,14 +37,13 @@ public class ProductReviewEndpoint implements com.zufar.icedlatte.openapi.produc
     private final ProductReviewCreator productReviewCreator;
     private final ProductReviewDeleter productReviewDeleter;
     private final ProductReviewsProvider productReviewsProvider;
-    private final ProductReviewsStatisticsProvider productReviewsStatisticsProvider;
-    private final ProductReviewRateUpdater productReviewRateUpdater;
-    private final ProductReviewRateProvider productReviewRateProvider;
+    private final ProductAverageRatingProvider productAverageRatingProvider;
+    private final ProductReviewLikesUpdater productReviewLikesUpdater;
 
     @Override
     @PostMapping(value = "/{productId}/reviews")
     public ResponseEntity<ProductReviewDto> addNewProductReview(@PathVariable final UUID productId,
-                                                                     final ProductReviewRequest productReviewRequest) {
+                                                                final ProductReviewRequest productReviewRequest) {
         log.info("Received the request to add a new product review for the product with the productId = '{}'", productId);
         var review = productReviewCreator.create(productId, productReviewRequest);
         log.info("New product review was added with productReviewId = '{}' for the product with the productId = '{}'", review.getProductReviewId(), productId);
@@ -90,27 +87,19 @@ public class ProductReviewEndpoint implements com.zufar.icedlatte.openapi.produc
     @GetMapping("/{productId}/reviews/statistics")
     public ResponseEntity<ProductReviewRatingStats> getRatingAndReviewStat(@PathVariable final UUID productId) {
         log.info("Received the request to get the statistics of product's review and rating for the product with the productId = '{}'", productId);
-        final ProductReviewRatingStats stats = productReviewsStatisticsProvider.getRatingAndReviewStat(productId);
+        final ProductReviewRatingStats stats = productAverageRatingProvider.getRatingAndReviewStat(productId);
         log.info("Statistics for product's review and rating for the product with the productId = '{}' was retrieved successfully", productId);
         return ResponseEntity.ok().body(stats);
     }
 
     @Override
-    @PostMapping(value = "/{productId}/reviews/rate")
-    public ResponseEntity<ProductReviewRateDto> rateProductReview(@PathVariable final UUID productId,
-                                                                  final ProductReviewRateDto request) {
-        log.info("Received the request to rate a product review for the product with the productId = '{}'", productId);
-        var reviewRate = productReviewRateUpdater.updateReviewRate(productId, request);
-        log.info("Product review with id {} was successfully {}", request.getProductReviewId(), request.getIsLike() ? "liked" : "disliked");
+    @PostMapping(value = "/{productId}/reviews/{productReviewId}/rate")
+    public ResponseEntity<ProductReviewLikeDto> addProductReviewLike(@PathVariable final UUID productId,
+                                                                     @PathVariable final UUID productReviewId,
+                                                                     final ProductReviewLikeDto request) {
+        log.info("Received the request to rate a product review for the product with the productId = '{}'.", productId);
+        var reviewRate = productReviewLikesUpdater.update(productId, productReviewId, request.getIsLike());
+        log.info("Product review with id = '{}' was successfully {}.", productReviewId, request.getIsLike() ? "liked" : "disliked");
         return ResponseEntity.ok().body(reviewRate);
-    }
-
-    @Override
-    @GetMapping(value = "/{productId}/reviews/rate")
-    public ResponseEntity<List<ProductReviewRateDto>> getProductReviewRates(@PathVariable final UUID productId) {
-        log.info("Received the request to fetch product review rates for the product with the productId = '{}'", productId);
-        var reviewRates = productReviewRateProvider.getProductReviewRates(productId);
-        log.info("Product review rates were successfully retrieved");
-        return ResponseEntity.ok().body(reviewRates);
     }
 }
