# src/main/java/com/zufar/icedlatte/review/entity/ProductReview.java
@@ -2,7 +2,6 @@ package com.zufar.icedlatte.review.entity;
 
 import com.zufar.icedlatte.product.entity.ProductInfo;
 import com.zufar.icedlatte.user.entity.UserEntity;
-import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.FetchType;
@@ -11,7 +10,6 @@ import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
-import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -21,7 +19,6 @@ import lombok.Setter;
 import org.hibernate.annotations.CreationTimestamp;
 
 import java.time.OffsetDateTime;
-import java.util.Set;
 import java.util.UUID;
 
 @Getter
@@ -54,11 +51,11 @@ public class ProductReview {
     @Column(name = "rating", nullable = false)
     private Integer productRating;
 
-    @OneToMany(mappedBy = "review",
-            cascade = {CascadeType.PERSIST, CascadeType.MERGE,
-                    CascadeType.REFRESH, CascadeType.REMOVE, CascadeType.DETACH},
-            orphanRemoval = true, fetch = FetchType.LAZY)
-    private Set<ProductReviewRate> reviewRates;
+    @Column(name = "likes_count", nullable = false)
+    private Integer likesCount;
+
+    @Column(name = "dislikes_count", nullable = false)
+    private Integer dislikesCount;
 
     @Override
     public String toString() {
